force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>