force-app/main/default/objects/Project__c/fields/Total_Logged_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Logged_Hours__c</fullName>
    <label>Total Logged Hours</label>
    <summarizedField>Time_Log__c.Hours__c</summarizedField>
    <summaryForeignKey>Time_Log__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>