force-app/main/default/objects/Project__c/fields/USD_to_INR_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>USD_to_INR_Exchange_Rate__c</fullName>
    <label>USD to INR Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>